1.20.1 fixes of 1.1.6 (1.1.8 on 1.21.1)